# xqemu-tools

./: .gitignore  NOTES.md  README.md  Vagrantfile  api_client.py  database.py  halo_basic_stat.py  memorpy-test.py  memory_mappings_and_offsets.py  memorytesting.py  notes.txt  qmp_minimal.py  replay_utils.py  requirements.txt  ui.py  ws_client.py  xemu_memory_watcher.py
scripts/: Start-Clickhouse.ps1
xemu-tools-rs/: .env.example  Cargo.toml
xemu-tools-rs/src/: config.rs  events.rs  halo.rs  main.rs  memory.rs  process.rs  qmp.rs  replay.rs  session.rs  ui.rs  util.rs  ws.rs  ws_server.rs
