[package]
name = "xemu-tools-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
sysinfo = "0.33"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.31"
egui_extras = "0.31"
egui_plot = "0.31"
tokio-tungstenite = "0.21"
futures-util = "0.3"
zstd = "0.13"
log = "0.4"
env_logger = "0.11"
regex = "1.10"
url = "2.5"
windows = { version = "0.52", features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_System_Memory",
] }
chrono = { version = "0.4.42", features = ["serde"] }
tokio-stream = "0.1.18"

[profile.profiling]
inherits = "release"
debug = true